promo code + jury + coach

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 							<li><a href="#about">A Propos</a></li>
 							<li><a href="#sponsors">Partenaires</a></li>
 							<li><a href="#how-it-works">Comment ça marche</a></li>
-							<!--<li><a href="#coachs">Coachs &amp; Jury</a></li>-->
+							<li><a href="#coachs">Coachs &amp; Jury</a>
 							<li><a href="#faq">FAQ</a></li>
 
 							<!-- HEADER ACTION BUTTON -->
@@ -145,9 +145,10 @@
 							</div>
 
 
-							<!--<div class="newsbox col-md-10 col-md-offset-1">
-								<strong>Dernière minute :</strong>
-							</div>-->
+							<div class="newsbox col-md-10 col-md-offset-1">
+								<strong>Etudiants ou demandeurs d'emplois ? Utilisez le code promo <span style="font-size: 16px;">HICETNUNC</span> en <a href="http://www.eventbrite.fr/e/billets-hacking-industry-camp-17896068623" target="_blank">prennant votre billet</a>.</strong><br>
+								Etudiants boursiers ? Contactez <a href="mailto:contact@alsacedigitale.org">contact@alsacedigitale.org</a>
+							</div>
 
 							<div class="hero-features row">
 
@@ -429,7 +430,7 @@
 
 			<!-- TEAM
 			================================= -->
-			<!--<section id="coachs" class="team-section section">
+			<section id="coachs" class="team-section section">
 
 				<div class="container-fluid">
 					
@@ -441,9 +442,7 @@
 							<div class="team-member">
 								<img class="team-member-picture" src="images/contents/team-member-1.jpg" alt="">
 								<div class="team-member-text">
-									<h4 class="team-member-name">Jason Castillo</h4>
-									<div class="team-member-position">CEO &amp; Co-Founder</div>
-									<p class="team-member-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
+									<h4 class="team-member-name">Yan-Erik DECORDE</h4>
 								</div>
 							</div>
 						</div>
@@ -452,9 +451,7 @@
 							<div class="team-member even">
 								<img class="team-member-picture" src="images/contents/team-member-2.jpg" alt="">
 								<div class="team-member-text">
-									<h4 class="team-member-name">Harold Kelly</h4>
-									<div class="team-member-position">CTO &amp; Co-Founder</div>
-									<p class="team-member-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
+									<h4 class="team-member-name">Elalami LAFKIH</h4>
 								</div>
 							</div>
 						</div>
@@ -465,9 +462,7 @@
 							<div class="team-member">
 								<img class="team-member-picture" src="images/contents/team-member-3.jpg" alt="">
 								<div class="team-member-text">
-									<h4 class="team-member-name">Kathy Nelson</h4>
-									<div class="team-member-position">Graphic Designer</div>
-									<p class="team-member-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
+									<h4 class="team-member-name">Yann KLIS</h4>
 								</div>
 							</div>
 						</div>
@@ -478,9 +473,7 @@
 							<div class="team-member even">
 								<img class="team-member-picture" src="images/contents/team-member-4.jpg" alt="">
 								<div class="team-member-text">
-									<h4 class="team-member-name">Dylan Fowler</h4>
-									<div class="team-member-position">UI/UX Designer</div>
-									<p class="team-member-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
+									<h4 class="team-member-name">Patrick LLERENA</h4>
 								</div>
 							</div>
 						</div>
@@ -491,9 +484,7 @@
 							<div class="team-member">
 								<img class="team-member-picture" src="images/contents/team-member-5.jpg" alt="">
 								<div class="team-member-text">
-									<h4 class="team-member-name">Carolyn Harvey</h4>
-									<div class="team-member-position">Development</div>
-									<p class="team-member-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
+									<h4 class="team-member-name">Aude PLASSARD</h4>
 								</div>
 							</div>
 						</div>
@@ -502,10 +493,80 @@
 							<div class="team-member even">
 								<img class="team-member-picture" src="images/contents/team-member-6.jpg" alt="">
 								<div class="team-member-text">
-									<h4 class="team-member-name">Diane Grant</h4>
-									<div class="team-member-position">Marketing &amp; Strategy</div>
-									<p class="team-member-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
+									<h4 class="team-member-name">Léo UNBEKANDT</h4>
 								</div>
+							</div>
+						</div>
+
+					</div>
+
+				</div>
+			</section>
+
+			<section class="team-section section" style="padding-top: 0;">
+
+				<div class="container-fluid">
+					<div class="team-row row" style="margin-top: 0;">
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member">
+								<img class="team-member-picture" src="images/contents/team-member-1.jpg" alt="">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Dominique VIVE</h4>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member even">
+								<img class="team-member-picture" src="images/contents/team-member-2.jpg" alt="">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Marc LEHMAN</h4>
+								</div>
+							</div>
+						</div>
+
+						<div class="hidden-md hidden-lg clear"></div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member">
+								<img class="team-member-picture" src="images/contents/team-member-3.jpg" alt="">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Céline POLOCE-WINTER</h4>
+								</div>
+							</div>
+						</div>
+
+						<div class="hidden-sm hidden-lg clear"></div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member even">
+								<img class="team-member-picture" src="images/contents/team-member-4.jpg" alt="">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Tamim DAOUDI</h4>
+								</div>
+							</div>
+						</div>
+
+						<div class="hidden-md hidden-lg clear"></div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member">
+								<img class="team-member-picture" src="images/contents/team-member-5.jpg" alt="">
+								<div class="team-member-text">
+									<h4 class="team-member-name">François HUYNH</h4>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member even">
+								<!--<img class="team-member-picture" src="images/contents/team-member-6.jpg" alt="">
+								<div class="team-member-text">
+									<h4 class="team-member-name"></h4>
+									<div class="team-member-position"></div>
+									<p class="team-member-description"></p>
+								</div>-->
 							</div>
 						</div>
 
@@ -523,22 +584,20 @@
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/team-member-1.jpg" alt="">
+								<img class="team-member-picture" src="images/contents/jury/sebastien-leduc.jpg" alt="Sébastien LEDUC">
 								<div class="team-member-text">
-									<h4 class="team-member-name">Jason Castillo</h4>
-									<div class="team-member-position">CEO &amp; Co-Founder</div>
-									<p class="team-member-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
+									<h4 class="team-member-name">Sébastien LEDUC</h4>
+									<div class="team-member-position">Responsable Compétitivité des Entreprises et Dynamique des Territoires à l'ADIR. Intervient en appui des projets de développement des entreprises et notamment sur les nouvelles organisations de la production.</div>
 								</div>
 							</div>
 						</div>
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member even">
-								<img class="team-member-picture" src="images/contents/team-member-2.jpg" alt="">
+								<img class="team-member-picture" src="images/contents/jury/francois-kormann.jpg" alt="François KORMANN">
 								<div class="team-member-text">
-									<h4 class="team-member-name">Harold Kelly</h4>
-									<div class="team-member-position">CTO &amp; Co-Founder</div>
-									<p class="team-member-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
+									<h4 class="team-member-name">François KORMANN</h4>
+									<div class="team-member-position">Président, fondateur de <a href="http://www.la-fabrique.org/" target="_blank">LA FABRIQUE</a> "Centre de Production Partagé".</div>
 								</div>
 							</div>
 						</div>
@@ -547,11 +606,10 @@
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/team-member-3.jpg" alt="">
+								<img class="team-member-picture" src="images/contents/jury/viviane-zeller.jpg" alt="Viviane ZELLER">
 								<div class="team-member-text">
-									<h4 class="team-member-name">Kathy Nelson</h4>
-									<div class="team-member-position">Graphic Designer</div>
-									<p class="team-member-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
+									<h4 class="team-member-name">Viviane ZELLER</h4>
+									<div class="team-member-position"> Ingénieur INSA génie mécanique option production automatisée, MBA Directeur d’usines chez Hager pendant plus de 15 ans. Actuellement, Consultant & Coach en performances industrielles et fondatrice d’une entreprise innovante.</div>
 								</div>
 							</div>
 						</div>
@@ -560,12 +618,12 @@
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member even">
-								<img class="team-member-picture" src="images/contents/team-member-4.jpg" alt="">
+								<!--<img class="team-member-picture" src="" alt="">
 								<div class="team-member-text">
-									<h4 class="team-member-name">Dylan Fowler</h4>
-									<div class="team-member-position">UI/UX Designer</div>
-									<p class="team-member-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
-								</div>
+									<h4 class="team-member-name"></h4>
+									<div class="team-member-position"></div>
+									<p class="team-member-description"></p>
+								</div>-->
 							</div>
 						</div>
 
@@ -573,23 +631,23 @@
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/team-member-5.jpg" alt="">
+								<!--<img class="team-member-picture" src="" alt="">
 								<div class="team-member-text">
-									<h4 class="team-member-name">Carolyn Harvey</h4>
-									<div class="team-member-position">Development</div>
-									<p class="team-member-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
-								</div>
+									<h4 class="team-member-name"></h4>
+									<div class="team-member-position"></div>
+									<p class="team-member-description"></p>
+								</div>-->
 							</div>
 						</div>
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member even">
-								<img class="team-member-picture" src="images/contents/team-member-6.jpg" alt="">
+								<!--<img class="team-member-picture" src="" alt="">
 								<div class="team-member-text">
-									<h4 class="team-member-name">Diane Grant</h4>
-									<div class="team-member-position">Marketing &amp; Strategy</div>
-									<p class="team-member-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
-								</div>
+									<h4 class="team-member-name"></h4>
+									<div class="team-member-position"></div>
+									<p class="team-member-description"></p>
+								</div>-->
 							</div>
 						</div>
 
@@ -597,7 +655,7 @@
 
 				</div>
 
-			</section>-->
+			</section>
 
 
 			<!-- FAQ
