--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/team-member-1.jpg" alt="">
+								<img class="team-member-picture" src="images/contents/coach/yan-erik-decorde.jpg" alt="Yan-Erik DECORDE">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Yan-Erik DECORDE</h4>
 								</div>
@@ -449,7 +449,7 @@
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member even">
-								<img class="team-member-picture" src="images/contents/team-member-2.jpg" alt="">
+								<img class="team-member-picture" src="images/contents/coach/elalami-lafkih.jpg" alt="Elalami LAFKIH">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Elalami LAFKIH</h4>
 								</div>
@@ -460,7 +460,7 @@
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/team-member-3.jpg" alt="">
+								<img class="team-member-picture" src="images/contents/coach/yann-klis.jpg" alt="Yann KLIS">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Yann KLIS</h4>
 								</div>
@@ -471,7 +471,7 @@
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member even">
-								<img class="team-member-picture" src="images/contents/team-member-4.jpg" alt="">
+								<img class="team-member-picture" src="images/contents/coach/patrick-llerena.jpg" alt="Patrick LLERENA">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Patrick LLERENA</h4>
 								</div>
@@ -482,7 +482,7 @@
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/team-member-5.jpg" alt="">
+								<img class="team-member-picture" src="images/contents/coach/aude-plassard.jpg" alt="Aude PLASSARD">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Aude PLASSARD</h4>
 								</div>
@@ -491,7 +491,7 @@
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member even">
-								<img class="team-member-picture" src="images/contents/team-member-6.jpg" alt="">
+								<img class="team-member-picture" src="images/contents/coach/leo-unbekandt.jpg" alt="Léo UNBEKANDT">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Léo UNBEKANDT</h4>
 								</div>
@@ -510,7 +510,7 @@
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/team-member-1.jpg" alt="">
+								<img class="team-member-picture" src="images/contents/coach/dominique-vive.jpg" alt="Dominique VIVE">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Dominique VIVE</h4>
 								</div>
@@ -519,7 +519,7 @@
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member even">
-								<img class="team-member-picture" src="images/contents/team-member-2.jpg" alt="">
+								<img class="team-member-picture" src="images/contents/coach/marc-lehman.jpg" alt="Marc LEHMAN">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Marc LEHMAN</h4>
 								</div>
@@ -530,7 +530,7 @@
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/team-member-3.jpg" alt="">
+								<img class="team-member-picture" src="images/contents/coach/celine-poloce-winter.jpg" alt="Céline POLOCE-WINTER">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Céline POLOCE-WINTER</h4>
 								</div>
@@ -541,7 +541,7 @@
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member even">
-								<img class="team-member-picture" src="images/contents/team-member-4.jpg" alt="">
+								<img class="team-member-picture" src="images/contents/coach/tamim-daoudi.jpg" alt="Tamim DAOUDI">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Tamim DAOUDI</h4>
 								</div>
@@ -552,7 +552,7 @@
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/team-member-5.jpg" alt="">
+								<img class="team-member-picture" src="images/contents/coach/francois-huynh.jpg" alt="">
 								<div class="team-member-text">
 									<h4 class="team-member-name">François HUYNH</h4>
 								</div>
