--- a/index.html
+++ b/index.html
@@ -428,6 +428,14 @@
 
 			</section>
 
+			<section id="planning" class="section">
+				<div class="container">
+					<div class="row">
+						<div class="col-md-6 col-md-offset-3 closing-buttons" data-animation="tada"><a href="planning.pdf" target="_blank" class="btn btn-lg btn-primary">Consulter le planning complet</a></div>
+					</div>
+				</div>
+			</section>
+
 			<!-- TEAM
 			================================= -->
 			<section id="coachs" class="team-section section">
