--- a/index.html
+++ b/index.html
@@ -626,12 +626,11 @@
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member even">
-								<!--<img class="team-member-picture" src="" alt="">
+								<img class="team-member-picture" src="images/contents/jury/fabrice-urban.jpg" alt="Fabrice URBAN">
 								<div class="team-member-text">
-									<h4 class="team-member-name"></h4>
-									<div class="team-member-position"></div>
-									<p class="team-member-description"></p>
-								</div>-->
+									<h4 class="team-member-name">Fabrice URBAN</h4>
+									<div class="team-member-position">Président directeur général des Usines Quiri à Duttlenheim et Strasbourg.</div>
+								</div>
 							</div>
 						</div>
 
