--- a/index.html
+++ b/index.html
@@ -81,9 +81,10 @@
 
 							<li><a href="#about">A Propos</a></li>
 							<li><a href="#sponsors">Partenaires</a></li>
-							<li><a href="#how-it-works">Comment ça marche</a></li>
+							<li><a href="#how-it-works">Déroulement</a></li>
+							<li><a href="#keynotes">Keynotes</a></li>
 							<li><a href="#coachs">Coachs &amp; Jury</a>
-							<li><a href="#faq">FAQ</a></li>
+							<!--<li><a href="#faq">FAQ</a></li>-->
 
 							<!-- HEADER ACTION BUTTON -->
 							<li class="header-action-button"><a target="_blank" href="http://www.eventbrite.fr/e/billets-hacking-industry-camp-17896068623" class="btn btn-primary">S'inscrire</a></li>
@@ -436,6 +437,42 @@
 				</div>
 			</section>
 
+			<section id="keynotes" class="section section-dark">
+				
+				<div class="section-background">
+					<!-- IMAGE BACKGROUND -->
+					<div class="section-background-image parallax" data-stellar-ratio="0.4">
+						<img src="images/backgrounds/background-keynote.jpg" alt="" style="opacity: 0.08;">
+					</div>
+				</div>
+
+				<div class="container">
+
+					<h2 class="section-heading text-center">Keynotes</h2>
+					<p class="col-md-12 text-center">Deux keynotes ouvertes au public le samedi 10 octobre</p>
+
+					<div class="row">
+						<div class="about-text col-md-6">
+							<h3>11h/12h : L'aventure d'un centre de production partagé ou Fablab</h3>
+
+							<p class="lead" style="font-size: 18px;">L'ouverture d'un Fablab est souvent l'aboutissement d'un projet humain individuel et collectif de longue haleine. Nous vous presenterons l'histoire du centre de production partage la fabrique.</p>
+							<p>Présentée par François Kormann de La Fabrique</p>
+
+
+						</div>
+						<div class="about-text col-md-6">
+							<h3>14h/15h : Introduction aux concepts de l'usine du futur : fondamentaux, usages et implications opérationnelles.</h3>
+
+							<p class="lead" style="font-size: 18px;">Cette rencontre a pour objectif de présenter les caractéristiques de ce qu'on appelle la 4ème révolution industrielle du point de vue des systèmes de production. Qu'est-ce qui la distingue des précédentes révolutions industrielles, comment se matérialisent les applications qui en découlent et quels sont les points critiques d'adoption des nouveaux usages ?</p>
+							<p>Présentée par Guillaume Lillig de CPC Analytics</p>
+							<p>15 mn de conférence introductive puis échanges</p>
+						</div>
+
+					</div>
+
+				</div>
+
+			</section>
 			<!-- TEAM
 			================================= -->
 			<section id="coachs" class="team-section section">
