--- a/index.html
+++ b/index.html
@@ -597,6 +597,34 @@
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member">
+								<img class="team-member-picture" src="images/contents/coach/yannick-jost.jpg" alt="Yannick Jost">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Yannick JOST</h4>
+								</div>								
+							</div>
+						</div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member even">
+								<img class="team-member-picture" src="images/contents/coach/manuel-yguel.jpg" alt="Manuel YGUEL">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Manuel YGUEL</h4>
+								</div>
+							</div>
+						</div>
+
+					</div>
+
+				</div>
+			</section>
+
+			<section class="team-section section" style="padding-top: 0;">
+
+				<div class="container-fluid">
+					<div class="team-row row" style="margin-top: 0;">
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member">
 								<img class="team-member-picture" src="images/contents/coach/francois-huynh.jpg" alt="">
 								<div class="team-member-text">
 									<h4 class="team-member-name">François HUYNH</h4>
@@ -606,12 +634,60 @@
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member even">
-								<!--<img class="team-member-picture" src="images/contents/team-member-6.jpg" alt="">
+								<!--<img class="team-member-picture" src="images/contents/coach/.jpg" alt="">
 								<div class="team-member-text">
 									<h4 class="team-member-name"></h4>
-									<div class="team-member-position"></div>
-									<p class="team-member-description"></p>
 								</div>-->
+							</div>
+						</div>
+
+						<div class="hidden-md hidden-lg clear"></div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member">
+								<!--<div class="team-member even">
+								<img class="team-member-picture" src="images/contents/coach/.jpg" alt="">
+								<div class="team-member-text">
+									<h4 class="team-member-name"></h4>
+								</div>
+							</div>-->
+							</div>
+						</div>
+
+						<div class="hidden-sm hidden-lg clear"></div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member even">
+								<!--<div class="team-member even">
+								<img class="team-member-picture" src="images/contents/coach/.jpg" alt="">
+								<div class="team-member-text">
+									<h4 class="team-member-name"></h4>
+								</div>
+							</div>-->
+							</div>
+						</div>
+
+						<div class="hidden-md hidden-lg clear"></div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member">
+								<!--<div class="team-member even">
+								<img class="team-member-picture" src="images/contents/coach/.jpg" alt="">
+								<div class="team-member-text">
+									<h4 class="team-member-name"></h4>
+								</div>
+							</div>-->
+							</div>
+						</div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member even">
+								<!--<div class="team-member even">
+								<img class="team-member-picture" src="images/contents/coach/.jpg" alt="">
+								<div class="team-member-text">
+									<h4 class="team-member-name"></h4>
+								</div>
+							</div>-->
 							</div>
 						</div>
 
