--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 							<li><a href="#how-it-works">Déroulement</a></li>
 							<li><a href="#keynotes">Keynotes</a></li>
 							<li><a href="#coachs">Coachs &amp; Jury</a>
+							<li><a href="#prizes">Prix</a>
 							<!--<li><a href="#faq">FAQ</a></li>-->
 
 							<!-- HEADER ACTION BUTTON -->
@@ -449,18 +450,22 @@
 				<div class="container">
 
 					<h2 class="section-heading text-center">Keynotes</h2>
-					<p class="col-md-12 text-center">Deux keynotes ouvertes au public le samedi 10 octobre</p>
+					<p class="col-md-12 text-center">Deux keynotes ouvertes au public gratuitement le <strong>samedi 10 octobre</strong></p>
 
 					<div class="row">
 						<div class="about-text col-md-6">
+							<img src="images/contents/keynote-fabrique.jpg" style="width: 100%;" alt="Keynote Fablab" title="Keynote Fablab" />
+
 							<h3>11h/12h : L'aventure d'un centre de production partagé ou Fablab</h3>
 
 							<p class="lead" style="font-size: 18px;">L'ouverture d'un Fablab est souvent l'aboutissement d'un projet humain individuel et collectif de longue haleine. Nous vous presenterons l'histoire du centre de production partage la fabrique.</p>
-							<p>Présentée par François Kormann de La Fabrique</p>
+							<p style="margin-bottom: 35px;">Présentée par François Kormann de La Fabrique</p>
 
 
 						</div>
 						<div class="about-text col-md-6">
+							<img src="images/contents/keynote-usine4-0.jpg" style="width: 100%;" alt="Keynote Usine 4.0" title="Keynote Usine 4.0" />
+
 							<h3>14h/15h : Introduction aux concepts de l'usine du futur : fondamentaux, usages et implications opérationnelles.</h3>
 
 							<p class="lead" style="font-size: 18px;">Cette rencontre a pour objectif de présenter les caractéristiques de ce qu'on appelle la 4ème révolution industrielle du point de vue des systèmes de production. Qu'est-ce qui la distingue des précédentes révolutions industrielles, comment se matérialisent les applications qui en découlent et quels sont les points critiques d'adoption des nouveaux usages ?</p>
@@ -777,6 +782,74 @@
 
 			</section>
 
+			<section id="prizes" class="section section-dark">
+				
+				<div class="section-background">
+					<!-- IMAGE BACKGROUND -->
+					<div class="section-background-image parallax" data-stellar-ratio="0.4">
+						<img src="images/backgrounds/background-pitch.jpg" alt="" style="opacity: 0.08;">
+					</div>
+				</div>
+
+				<div class="container">
+
+					<h2 class="section-heading text-center">Prix</h2>
+
+					<p class="col-md-12 text-center">Le jury décernera les différents prix des sponsors à la fin de l'événement, cette cérémonie est ouverte au public</strong></p>
+
+					<div class="row">
+						<div class="about-text col-md-6">
+							<div class="row">
+								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
+								<div class="col-xs-9">
+									<h3>Prix LA FABRIQUE</h3>
+									<p>Les lauréats La Fabrique du Hacking Industry Camp recevront un abonnement à La Fabrique dont ils pourront disposer pour réaliser les versions futures de leurs prototypes. La Fabrique ouvrira ses portes et sa communauté de makers à l'équipe gagnante pour les accompagner tant sur les aspects conception que réalisation.</p>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
+								<div class="col-xs-9">
+									<h3>Prix SCALINGO</h3>
+									<p>La société Scalingo, service cloud  d'hébergement web, propose deux prix pour le premier, 1000€ de crédits utilisables sur la plateforme pour le deuxième et troisième, 500€ de crédits utilisables sur la plateforme.</p>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
+								<div class="col-xs-9">
+									<h3>Prix ALSACE DIGITALE</h3>
+									<p>Les lauréats Alsace Digitale auront accès à l’espace Flex pendant 6 mois pour tous les membres de l’équipe, ainsi qu’en accès gratuit à tous les évènements organisés par l’association juqu’à fin mars 2016.</p>
+								</div>
+							</div>
+						</div>
+						<div class="about-text col-md-6">
+							<div class="row">
+								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
+								<div class="col-xs-9">
+									<h3>Prix RHÉNA2</h3>
+									<p>● Un accompagnement pour une startup jusqu’à sa première levée de fond<br>● Révélation de l’excellence des leaders du projet<br>● Mise en cohérence de l’ADN du projet avec l’excellence des leaders<br>● Coaching des leaders dans l’affirmation de leur contribution maximale au projet<br>● Accompagnement du projet dans son futur émergent jusqu’à la rencontre de ses premiers financeurs</p>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
+								<div class="col-xs-9">
+									<h3>Prix PRWORLDMEDIA</h3>
+									<p>Mise à disposition de l’outil Invite The Media. Un communiqué de presse rédigé, présentant le gagnant de l’évènement. Un envoi en national au média local + national + presse spécialisé + pays francophone (valeur de 1217€)</p>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
+								<div class="col-xs-9">
+									<h3>Prix ÉS</h3>
+									<p>Détails à venir</p>
+								</div>
+							</div>
+						</div>
+
+					</div>
+
+				</div>
+
+			</section>
 
 			<!-- FAQ
 			================================= -->
