--- a/index.html
+++ b/index.html
@@ -810,14 +810,14 @@
 								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
 								<div class="col-xs-9">
 									<h3>Prix SCALINGO</h3>
-									<p>La société Scalingo, service cloud  d'hébergement web, propose deux prix pour le premier, 1000€ de crédits utilisables sur la plateforme pour le deuxième et troisième, 500€ de crédits utilisables sur la plateforme.</p>
+									<p>La société Scalingo, service cloud  d'hébergement web, propose deux prix. Pour le premier, 1000€ de crédits utilisables sur la plateforme, et pour le deuxième et troisième, 500€ de crédits utilisables sur la plateforme.</p>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
 								<div class="col-xs-9">
 									<h3>Prix ALSACE DIGITALE</h3>
-									<p>Les lauréats Alsace Digitale auront accès à l’espace Flex pendant 6 mois pour tous les membres de l’équipe, ainsi qu’en accès gratuit à tous les évènements organisés par l’association juqu’à fin mars 2016.</p>
+									<p>Les lauréats Alsace Digitale auront accès à l’espace Flex pendant 6 mois pour tous les membres de l’équipe, ainsi qu’un accès gratuit à tous les évènements organisés par l’association juqu’à fin mars 2016.</p>
 								</div>
 							</div>
 						</div>
