--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
 								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
 								<div class="col-xs-9">
 									<h3>Prix PRWORLDMEDIA</h3>
-									<p>Mise à disposition de l’outil Invite The Media. Un communiqué de presse rédigé, présentant le gagnant de l’évènement. Un envoi en national au média local + national + presse spécialisé + pays francophone (valeur de 1217€)</p>
+									<p>Mise à disposition de l’outil Invite The Media. Un communiqué de presse rédigé, présentant le gagnant de l’événement. Un envoi en national au média local + national + presse spécialisée + pays francophone (valeur de 1217€)</p>
 								</div>
 							</div>
 							<div class="row">
