--- a/index.html
+++ b/index.html
@@ -346,6 +346,8 @@
 						<a href="http://lafab.org" target="_blank"><img src="images/contents/lafabrique.jpg" alt="La Fabrique"></a>
 						<a href="http://cpc-analytics.fr" target="_blank"><img src="images/contents/cpc-analytics.jpg" alt="Cpc Analytics"></a>
 						<a href="http://www.reck.fr/" target="_blank"><img src="images/contents/cafe-reck.jpg" alt="Cafés Reck"></a>
+						<a href="http://prworldmedia.com/" target="_blank"><img src="images/contents/prworldmedia.jpg" alt="PR World Media"></a>
+						<a href="http://invitethemedia.com/" target="_blank"><img src="images/contents/invitethemedia.jpg" alt="InviteTheMedia"></a>
 					</div>
 
 					<div class="sponsors-row" data-animation="bounceIn">
