--- a/index.html
+++ b/index.html
@@ -1036,7 +1036,7 @@
 					</div>
 
 					<div class="footer-copyright">
-						&copy; 2015 <a href="http://www.alsacedigitale.org/" target="_blank" title="Alsace Digitale">Alsace Digitale</a>
+						<a href="http://issuu.com/alsacedigitale/docs/20151006_dp_hacking_industry_camp" target"=_blank">Dossier de presse</a> - &copy; 2015 <a href="http://www.alsacedigitale.org/" target="_blank" title="Alsace Digitale">Alsace Digitale</a>
 					</div>
 
 				</div>
