--- a/index.html
+++ b/index.html
@@ -452,23 +452,34 @@
 				<div class="container">
 
 					<h2 class="section-heading text-center">Keynotes</h2>
-					<p class="col-md-12 text-center">Deux keynotes ouvertes au public gratuitement le <strong>samedi 10 octobre</strong></p>
+					<p class="col-md-12 text-center">Des keynotes gratuites et <strong>ouvertes au public</strong></p>
 
 					<div class="row">
 						<div class="about-text col-md-6">
+							<h3>Samedi 10 octobre de 11h à 12h</h3>
 							<img src="images/contents/keynote-fabrique.jpg" style="width: 100%;" alt="Keynote Fablab" title="Keynote Fablab" />
 
-							<h3>11h/12h : L'aventure d'un centre de production partagé ou Fablab</h3>
+							<h3>L'aventure d'un centre de production partagé ou Fablab</h3>
 
 							<p class="lead" style="font-size: 18px;">L'ouverture d'un Fablab est souvent l'aboutissement d'un projet humain individuel et collectif de longue haleine. Nous vous presenterons l'histoire du centre de production partage la fabrique.</p>
-							<p style="margin-bottom: 35px;">Présentée par François Kormann de La Fabrique</p>
+							<p style="margin-bottom: 50px;">Présentée par François Kormann de La Fabrique</p>
+							
+							<img src="images/contents/keynote-iot.jpg" style="width: 100%;" alt="Keynote objets connectés" title="Les objets connectés" />
+							
+							<h3>Introduction aux objets connectés</h3>
+
+							<p class="lead" style="font-size: 18px;">Qu'est-ce qu'un objet connecté ? Quelles sont les technologies actuellement à votre disposition ?</p>
+
+							<p style="margin-bottom: 35px;">Présentée par la startup <a href="http://strataggem.com" target="_blank">Strataggem</a></p>
 
 
 						</div>
 						<div class="about-text col-md-6">
+							<h3>Samedi 10 octobre de 14h à 15h</h3>
+
 							<img src="images/contents/keynote-usine4-0.jpg" style="width: 100%;" alt="Keynote Usine 4.0" title="Keynote Usine 4.0" />
 
-							<h3>14h/15h : Introduction aux concepts de l'usine du futur : fondamentaux, usages et implications opérationnelles.</h3>
+							<h3>Introduction aux concepts de l'usine du futur : fondamentaux, usages et implications opérationnelles.</h3>
 
 							<p class="lead" style="font-size: 18px;">Cette rencontre a pour objectif de présenter les caractéristiques de ce qu'on appelle la 4ème révolution industrielle du point de vue des systèmes de production. Qu'est-ce qui la distingue des précédentes révolutions industrielles, comment se matérialisent les applications qui en découlent et quels sont les points critiques d'adoption des nouveaux usages ?</p>
 							<p>Présentée par Guillaume Lillig de CPC Analytics</p>
