--- a/index.html
+++ b/index.html
@@ -652,6 +652,28 @@
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member even">
+								<img class="team-member-picture" src="images/contents/coach/yasin-sayin.jpg" alt="Yasin SAYIN">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Yasin SAYIN</h4>
+								</div>
+							</div>
+						</div>
+
+						<div class="hidden-md hidden-lg clear"></div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member">
+								<img class="team-member-picture" src="images/contents/coach/nophoto.png" alt="no photo available">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Thongchai CHINGHATAM</h4>
+								</div>
+							</div>
+						</div>
+
+						<div class="hidden-sm hidden-lg clear"></div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member even">
 								<!--<img class="team-member-picture" src="images/contents/coach/.jpg" alt="">
 								<div class="team-member-text">
 									<h4 class="team-member-name"></h4>
@@ -663,49 +685,19 @@
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member">
-								<!--<div class="team-member even">
-								<img class="team-member-picture" src="images/contents/coach/.jpg" alt="">
+								<!--<img class="team-member-picture" src="images/contents/coach/.jpg" alt="">
 								<div class="team-member-text">
 									<h4 class="team-member-name"></h4>
-								</div>
-							</div>-->
-							</div>
-						</div>
-
-						<div class="hidden-sm hidden-lg clear"></div>
-
-						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member even">
-								<!--<div class="team-member even">
-								<img class="team-member-picture" src="images/contents/coach/.jpg" alt="">
-								<div class="team-member-text">
-									<h4 class="team-member-name"></h4>
-								</div>
-							</div>-->
-							</div>
-						</div>
-
-						<div class="hidden-md hidden-lg clear"></div>
-
-						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member">
-								<!--<div class="team-member even">
-								<img class="team-member-picture" src="images/contents/coach/.jpg" alt="">
-								<div class="team-member-text">
-									<h4 class="team-member-name"></h4>
-								</div>
-							</div>-->
+								</div>-->
 							</div>
 						</div>
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member even">
-								<!--<div class="team-member even">
-								<img class="team-member-picture" src="images/contents/coach/.jpg" alt="">
+								<!--<img class="team-member-picture" src="images/contents/coach/.jpg" alt="">
 								<div class="team-member-text">
 									<h4 class="team-member-name"></h4>
-								</div>
-							</div>-->
+								</div>-->
 							</div>
 						</div>
 
