--- a/index.html
+++ b/index.html
@@ -1032,14 +1032,16 @@
 					<h3 class="footer-hashtag">
 						#HICamp
 					</h3>					
+					
+					<a href="http://issuu.com/alsacedigitale/docs/20151006_dp_hacking_industry_camp" style="display: block; margin-bottom: 40px; font-size: 18px;" target="_blank">Dossier de presse</a>
 
-					<div class="footer-socmed">
+					<div class="footer-socmed">						
 						<a href="http://facebook.com/alsace.digitale" target="_blank"><span class="fa fa-facebook"></span></a>
 						<a href="https://twitter.com/AlsaceDigitale" target="_blank"><span class="fa fa-twitter"></span></a>
 					</div>
 
 					<div class="footer-copyright">
-						<a href="http://issuu.com/alsacedigitale/docs/20151006_dp_hacking_industry_camp" target"=_blank">Dossier de presse</a> - &copy; 2015 <a href="http://www.alsacedigitale.org/" target="_blank" title="Alsace Digitale">Alsace Digitale</a>
+						&copy; 2015 <a href="http://www.alsacedigitale.org/" target="_blank" title="Alsace Digitale">Alsace Digitale</a>
 					</div>
 
 				</div>
